Closed Bug 459674 Opened 17 years ago Closed 17 years ago

widget printing compiler fixes.

Categories

(Core :: Widget: Win32, defect)

All
Windows Mobile 6 Professional
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dougt, Assigned: blassey)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch v.1 - patch from blassey (obsolete) — Splinter Review
widget printing stuff doesn't compile on windows ce.
Attachment #342884 - Flags: review?(doug.turner)
Comment on attachment 342884 [details] [diff] [review] patch v.1 - patch from blassey bump the uuid in nsIPrintSettingsWin.idl do we need to worry about the interface change?
Attachment #342884 - Flags: superreview?(emaijala)
Attachment #342884 - Flags: review?(doug.turner)
Attachment #342884 - Flags: review+
Comment on attachment 342884 [details] [diff] [review] patch v.1 - patch from blassey I think at least calls to GetDeviceName, SetDeviceName, GetDriverName and SetDriverName in nsDeviceContextSpecWin should be changed too. (I'm not a super-reviewer)
Attachment #342884 - Flags: superreview?(emaijala) → superreview-
I think this change is too big to carry dougt's review
Assignee: doug.turner → blassey
Attachment #342884 - Attachment is obsolete: true
Attachment #343438 - Flags: superreview?(pavlov)
Attachment #343438 - Flags: review?(pavlov)
Attachment #343438 - Attachment is patch: true
Attachment #343438 - Attachment mime type: application/octet-stream → text/plain
Attachment #343438 - Flags: superreview?(roc)
Attachment #343438 - Flags: superreview?(pavlov)
Attachment #343438 - Flags: review?(pavlov)
Attachment #343438 - Flags: review+
Comment on attachment 343438 [details] [diff] [review] changed uuid and switched using wide device name and driver name this looks right -- roc can you just take a look at the string stuff and make sure you don't spot anything I missed?
Attachment #343438 - Flags: superreview?(roc) → superreview+
0b9819e66ace: Bug 459674: widget printing wide char fixes r=stuart sr=roc diff browse Brad Lassey <blassey@mozilla.com> - Tue, 21 Oct 2008 20:54:26 -0400 - rev 20741 Bug 459674: widget printing wide char fixes r=stuart sr=roc
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
might have caused bug 461283 ?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: