Bug 459674: widget printing wide char fixes r=stuart sr=roc